@@ -2,6 +2,7 @@
  * #470: Move mysqldump options to the beginning of the command due to MySQL bug 30994.
  * #471: When command-line configuration override produces a parse error, error cleanly instead of
    tracebacking.
+ * #476: Fix unicode error when restoring particular MySQL databases.
 
 1.5.21
  * #28: Optionally retry failing backups via "retries" and "retry_wait" configuration options.
